<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mathematical_menu_sin"
        android:title="@string/mathematical_menu_sin"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/mathematical_menu_cos"
        android:title="@string/mathematical_menu_cos"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/mathematical_menu_tan"
        android:title="@string/mathematical_menu_tan"
        android:orderInCategory="3"
        />

    <item
        android:id="@+id/mathematical_menu_raiz"
        android:title="@string/mathematical_menu_raiz"
        android:orderInCategory="4"
        />

    <item
        android:id="@+id/mathematical_menu_pi"
        android:title="@string/mathematical_menu_pi"
        android:orderInCategory="5"
        />

    <item
        android:id="@+id/mathematical_menu_convert_binary"
        android:orderInCategory="6"
        android:title="@string/mathematical_menu_convert_binary" />

    <item
        android:id="@+id/mathematical_menu_convert_decimal"
        android:orderInCategory="6"
        android:title="@string/mathematical_menu_convert_decimal" />
    <item
        android:id="@+id/mathematical_menu_convert_hexadecimal"
        android:orderInCategory="6"
        android:title="@string/mathematical_menu_convert_hexadecimal" />
    <item
        android:id="@+id/mathematical_menu_convert_octal"
        android:orderInCategory="6"
        android:title="@string/mathematical_menu_convert_octal" />

</menu>
