<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/main_menu_copy"
        android:title="@string/main_menu_copy"
        android:orderInCategory="1"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/main_menu_paste"
        android:title="@string/main_menu_paste"
        android:orderInCategory="2"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/main_menu_settings"
        android:title="@string/main_menu_settings"
        android:orderInCategory="3"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/main_menu_about"
        android:title="@string/main_menu_about"
        android:orderInCategory="4"
        app:showAsAction="never" />
    
</menu>
